# bobber-lib

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bobber/: __init__.py  main.py
bobber/proto/: broker_pb2_grpc.py
proto/: broker.proto  broker_pb2.py
src/proto/: broker_pb2_grpc.py
tests/: test_main.py
